--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ platform = nordicnrf52@4.0
 board = adafruit_feather_nrf52832
 framework = arduino
 monitor_speed = 115200
+build_flags = -DBUILD_TIMESTAMP=$UNIX_TIME
 
 board_build.mcu = nrf52832
 board_build.f_cpu = 64000000L
