Create task to save power

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ platform = nordicnrf52@4.0
 board = adafruit_feather_nrf52832
 framework = arduino
 monitor_speed = 115200
-build_flags = -DBUILD_TIMESTAMP=$UNIX_TIME
+build_flags = -DBUILD_TIMESTAMP=$UNIX_TIME -DINCLUDE_xTaskGetCurrentTaskHandle=1
 
 board_build.mcu = nrf52832
 board_build.f_cpu = 64000000L
