--- a/platformio.ini
+++ b/platformio.ini
@@ -11,23 +11,24 @@
 [platformio]
 core_dir = ./.core
 
-[env:wlanthermo]
+[env]
 platform = nordicnrf52@4.0
-board = adafruit_feather_nrf52832
 framework = arduino
 monitor_speed = 115200
 build_flags = -DBUILD_TIMESTAMP=$UNIX_TIME
-
-board_build.mcu = nrf52832
 board_build.f_cpu = 64000000L
-
-upload_protocol = nrfjprog
-debug_tool = jlink
-
 lib_deps =
     ArduinoJson
     ArduinoLog
 
+[env:wlanthermo]
+board = adafruit_feather_nrf52832
+board_build.mcu = nrf52832
 extra_scripts =
     pre:pre_extra_script.py
     post:post_extra_script.py
+
+[env:dongle]
+board = adafruit_feather_nrf52840
+board_build.mcu = nrf52840
+build_flags = ${env.build_flags} -DNRF_DONGLE
