Add debug flag as comment

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,4 +31,4 @@ extra_scripts =
 [env:dongle]
 board = adafruit_feather_nrf52840
 board_build.mcu = nrf52840
-build_flags = ${env.build_flags} -DNRF_DONGLE
+build_flags = ${env.build_flags} -DNRF_DONGLE ;-DCFG_DEBUG=2
