Add nrf52840 support

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,9 +21,18 @@ lib_deps =
     ArduinoJson
     ArduinoLog
 
-[env:wlanthermo]
+[env:wlanthermo_nrf52832]
 board = adafruit_feather_nrf52832
 board_build.mcu = nrf52832
+build_flags = ${env.build_flags} -DPIN_SERIAL_RX=14 -DPIN_SERIAL_TX=18 -DSERIAL_VAR=Serial -DBLE_TX_POWER=4
+extra_scripts =
+    pre:pre_extra_script.py
+    post:post_extra_script.py
+
+[env:wlanthermo_nrf52840]
+board = adafruit_feather_nrf52840
+board_build.mcu = nrf52840
+build_flags = ${env.build_flags} -DPIN_SERIAL_RX=21 -DPIN_SERIAL_TX=16 -DSERIAL_VAR=Serial1 -DBLE_TX_POWER=8
 extra_scripts =
     pre:pre_extra_script.py
     post:post_extra_script.py
@@ -31,4 +40,4 @@ extra_scripts =
 [env:dongle]
 board = adafruit_feather_nrf52840
 board_build.mcu = nrf52840
-build_flags = ${env.build_flags} -DNRF_DONGLE ;-DCFG_DEBUG=2
+build_flags = ${env.build_flags} -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 ;-DCFG_DEBUG=2
