--- a/platformio.ini
+++ b/platformio.ini
@@ -40,4 +40,4 @@ extra_scripts =
 [env:dongle]
 board = adafruit_feather_nrf52840
 board_build.mcu = nrf52840
-build_flags = ${env.build_flags} -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 ;-DCFG_DEBUG=2
+build_flags = ${env.build_flags} -DPIN_SERIAL_RX=1 -DPIN_SERIAL_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
