--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 core_dir = ./.core
 
 [env]
-platform = nordicnrf52@4.0
+platform = nordicnrf52@10.4.0
 framework = arduino
 monitor_speed = 115200
 build_flags = -DBUILD_TIMESTAMP=$UNIX_TIME
@@ -32,7 +32,7 @@ extra_scripts =
 [env:wlanthermo_nrf52840]
 board = adafruit_feather_nrf52840
 board_build.mcu = nrf52840
-build_flags = ${env.build_flags} -DPIN_SERIAL_RX=21 -DPIN_SERIAL_TX=16 -DSERIAL_VAR=Serial1 -DBLE_TX_POWER=8
+build_flags = ${env.build_flags} -DPIN_SERIAL1_RX=21 -DPIN_SERIAL1_TX=16 -DSERIAL_VAR=Serial1 -DBLE_TX_POWER=8
 extra_scripts =
     pre:pre_extra_script.py
     post:post_extra_script.py
@@ -40,4 +40,5 @@ extra_scripts =
 [env:dongle]
 board = adafruit_feather_nrf52840
 board_build.mcu = nrf52840
-build_flags = ${env.build_flags} -DPIN_SERIAL_RX=1 -DPIN_SERIAL_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
+build_flags = ${env.build_flags} -DPIN_SERIAL1_RX=1 -DPIN_SERIAL1_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
+
