--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,20 @@
 core_dir = ./.core
 
 [env]
-platform = nordicnrf52@4.0
+platform = nordicnrf52@10.4.0
+;platform = https://github.com/platformio/platform-nordicnrf52.git#1a4df4d   ;#2bd968e
+platform_packages =
+    platformio/tool-adafruit-nrfutil@^1.503.0
+    ;platformio/framework-arduinoadafruitnrf52@^1.10300.0   ;https://github.com/adafruit/Adafruit_nRF52_Arduino.git#be18594 
+    ;platformio/tool-adafruit-nrfutil@^1.503.0
+    ;platformio/tool-sreccat@^1.164.0
+    ;platformio/toolchain-gccarmnoneeabi@^1.120301.0
 framework = arduino
 monitor_speed = 115200
 build_flags = -DBUILD_TIMESTAMP=$UNIX_TIME
 board_build.f_cpu = 64000000L
 lib_deps =
-    ArduinoJson
+    ArduinoJson@6.13.0  #beim Wechsel auf Version 7 bitte folgendes beachten: www.arduinojson.org/news/2024/01/03/arduinojson-7/
     ArduinoLog
 
 [env:wlanthermo_nrf52832]
@@ -32,12 +39,15 @@ extra_scripts =
 [env:wlanthermo_nrf52840]
 board = adafruit_feather_nrf52840
 board_build.mcu = nrf52840
-build_flags = ${env.build_flags} -DPIN_SERIAL_RX=21 -DPIN_SERIAL_TX=16 -DSERIAL_VAR=Serial1 -DBLE_TX_POWER=8
+build_flags = ${env.build_flags} -DPIN_SERIAL1_RX=21 -DPIN_SERIAL1_TX=16 -DSERIAL_VAR=Serial1 -DBLE_TX_POWER=8
 extra_scripts =
     pre:pre_extra_script.py
     post:post_extra_script.py
 
 [env:dongle]
 board = adafruit_feather_nrf52840
+;board = nrf52840_dk_adafruit   ;for DK-Board
 board_build.mcu = nrf52840
 build_flags = ${env.build_flags} -DPIN_SERIAL_RX=1 -DPIN_SERIAL_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
+;build_flags = ${env.build_flags} -DPIN_SERIAL1_RX=1 -DPIN_SERIAL1_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
+
