--- a/platformio.ini
+++ b/platformio.ini
@@ -39,7 +39,8 @@ extra_scripts =
 [env:wlanthermo_nrf52840]
 board = adafruit_feather_nrf52840
 board_build.mcu = nrf52840
-build_flags = ${env.build_flags} -DPIN_SERIAL1_RX=21 -DPIN_SERIAL1_TX=16 -DSERIAL_VAR=Serial1 -DBLE_TX_POWER=8
+build_unflags = -Ofast
+build_flags = ${env.build_flags} -DPIN_SERIAL1_RX=21 -DPIN_SERIAL1_TX=16 -DSERIAL_VAR=Serial1 -DBLE_TX_POWER=8 -Os
 extra_scripts =
     pre:pre_extra_script.py
     post:post_extra_script.py
