Add missing platform via GitHub

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,10 @@
 core_dir = ./.core
 
 [env]
-platform = nordicnrf52@4.0
+platform = https://github.com/platformio/platform-nordicnrf52.git#v4.0.0
+platform_packages =
+  ; use upstream Git version
+  framework-arduinoadafruitnrf52 @ https://github.com/adafruit/Adafruit_nRF52_Arduino.git#0.14.5
 framework = arduino
 monitor_speed = 115200
 build_flags = -DBUILD_TIMESTAMP=$UNIX_TIME
