--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -U platformio
-          pip install -U adafruit-nrfutil
       - name: Build
-        run: platformio run
+        run: |
+          wget https://developer.nordicsemi.com/.pc-tools/nrfutil/x64-linux/nrfutil
+          platformio run
       - uses: actions/upload-artifact@v1
         with:
           name: artifacts
