Make nrfutil executable

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Build
         run: |
           wget https://developer.nordicsemi.com/.pc-tools/nrfutil/x64-linux/nrfutil
+          chmod +x nrfutil
           platformio run
       - uses: actions/upload-artifact@v1
         with:
