--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -U platformio
+          pip install -U adafruit-nrfutil
       - name: Build
         run: |
           wget https://developer.nordicsemi.com/.pc-tools/nrfutil/x64-linux/nrfutil
