--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ monitor_speed = 115200
 build_flags = -DBUILD_TIMESTAMP=$UNIX_TIME
 board_build.f_cpu = 64000000L
 lib_deps =
-    ArduinoJson
+    ArduinoJson@6.13.0  #beim Wechsel auf Version 7 bitte folgendes beachten: www.arduinojson.org/news/2024/01/03/arduinojson-7/
     ArduinoLog
 
 [env:wlanthermo_nrf52832]
