--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
           pip install -U adafruit-nrfutil
       - name: Build
         run: |
-          wget https://developer.nordicsemi.com/.pc-tools/nrfutil/x64-linux/nrfutil
-          chmod +x nrfutil
+          wget https://developer.nordicsemi.com/.pc-tools/nrfutil/x64-linux/nrfutil -O nrfutil/nrfutil
+          chmod +x nrfutil/nrfutil
           platformio run
       - uses: actions/upload-artifact@v1
         with:
