--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
           pip install -U adafruit-nrfutil
       - name: Build
         run: |
+          mkdir nrfutil
           wget https://developer.nordicsemi.com/.pc-tools/nrfutil/x64-linux/nrfutil -O nrfutil/nrfutil
           chmod +x nrfutil/nrfutil
           platformio run
