--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 core_dir = ./.core
 
 [env]
-platform = https://github.com/platformio/platform-nordicnrf52.git#v4.0.0
+platform = https://github.com/WLANThermo-nano/platform-nordicnrf52.git#v4.0.0
 platform_packages =
   ; use upstream Git version
-  framework-arduinoadafruitnrf52 @ https://github.com/tuniii/Adafruit_nRF52_Arduino#0.14.5-fix
+  framework-arduinoadafruitnrf52 @ https://github.com/WLANThermo-nano/Adafruit_nRF52_Arduino.git#0.14.5-fix
 framework = arduino
 monitor_speed = 115200
 build_flags = -DBUILD_TIMESTAMP=$UNIX_TIME
