--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ platform = https://github.com/WLANThermo-nano/platform-nordicnrf52.git#v4.0.0
 platform_packages =
   ; use upstream Git version
   framework-arduinoadafruitnrf52 @ https://github.com/WLANThermo-nano/Adafruit_nRF52_Arduino.git#0.14.5-fix
+  platformio/tool-bossac-nordicnrf52@^1.10901.201022
 framework = arduino
 monitor_speed = 115200
 build_flags = -DBUILD_TIMESTAMP=$UNIX_TIME
@@ -42,5 +43,7 @@ extra_scripts =
 
 [env:dongle]
 board = adafruit_feather_nrf52840
+;board = nrf52840_dk_adafruit
 board_build.mcu = nrf52840
 build_flags = ${env.build_flags} -DPIN_SERIAL_RX=1 -DPIN_SERIAL_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
+;build_flags = ${env.build_flags} -DPIN_SERIAL1_RX=1 -DPIN_SERIAL1_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
