--- a/platformio.ini
+++ b/platformio.ini
@@ -42,8 +42,8 @@ extra_scripts =
     post:post_extra_script.py
 
 [env:dongle]
-board = adafruit_feather_nrf52840
-;board = nrf52840_dk_adafruit
+;board = adafruit_feather_nrf52840
+board = nrf52840_dk_adafruit
 board_build.mcu = nrf52840
-build_flags = ${env.build_flags} -DPIN_SERIAL_RX=1 -DPIN_SERIAL_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
-;build_flags = ${env.build_flags} -DPIN_SERIAL1_RX=1 -DPIN_SERIAL1_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
+;build_flags = ${env.build_flags} -DPIN_SERIAL_RX=1 -DPIN_SERIAL_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
+build_flags = ${env.build_flags} -DPIN_SERIAL1_RX=1 -DPIN_SERIAL1_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
