--- a/platformio.ini
+++ b/platformio.ini
@@ -44,3 +44,10 @@ extra_scripts =
 board = adafruit_feather_nrf52840
 board_build.mcu = nrf52840
 build_flags = ${env.build_flags} -DPIN_SERIAL_RX=1 -DPIN_SERIAL_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
+
+[env:dkboard]
+;board = nrf52840_dk
+board = adafruit_feather_nrf52840
+board_build.mcu = nrf52840
+board_build.variant = nRF52DK
+build_flags = ${env.build_flags} -DPIN_SERIAL_RX=1 -DPIN_SERIAL_TX=0 -DNRF_DONGLE -DSERIAL_VAR=Serial  -DBLE_TX_POWER=8 -DCFG_DEBUG=1
